--- a/java/idea-ui/src/com/intellij/facet/impl/ui/libraries/LibraryCompositionOptionsPanel.form
+++ b/java/idea-ui/src/com/intellij/facet/impl/ui/libraries/LibraryCompositionOptionsPanel.form
@@ -17,24 +17,20 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="b6bf5" class="javax.swing.JTextArea" binding="myMissingLibrariesArea">
+          <component id="3966c" class="javax.swing.JLabel" binding="myMissingLibrariesLabel">
             <constraints>
               <card name="shown"/>
             </constraints>
             <properties>
-              <editable value="false"/>
-              <lineWrap value="true"/>
-              <wrapStyleWord value="true"/>
+              <text value="Label"/>
             </properties>
           </component>
-          <component id="9f0b5" class="javax.swing.JTextArea" binding="myHiddenTextArea">
+          <component id="3125c" class="javax.swing.JLabel" binding="myHiddenLabel">
             <constraints>
               <card name="hidden"/>
             </constraints>
             <properties>
-              <editable value="false"/>
-              <lineWrap value="true"/>
-              <wrapStyleWord value="true"/>
+              <text value="Label"/>
             </properties>
           </component>
         </children>
@@ -50,7 +46,7 @@
           <grid id="c7640" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -79,12 +75,6 @@
                   </hspacer>
                 </children>
               </grid>
-              <component id="bbb02" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="myDirectoryField">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="3" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-              </component>
               <grid id="1f138" binding="myMirrorsPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="2" use-parent-layout="false"/>
@@ -93,6 +83,12 @@
                 <border type="none"/>
                 <children/>
               </grid>
+              <component id="bbb02" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="myDirectoryField">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="3" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+              </component>
             </children>
           </grid>
           <grid id="f7f4" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -135,11 +131,6 @@
                   <text resource-bundle="messages/ProjectBundle" key="composing.library.name.label"/>
                 </properties>
               </component>
-              <hspacer id="3d2d2">
-                <constraints>
-                  <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </hspacer>
               <component id="2cb6b" class="javax.swing.JTextField" binding="myLibraryNameField">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -179,6 +170,11 @@
                   <text resource-bundle="messages/ProjectBundle" key="composing.liibrary.new.library.label"/>
                 </properties>
               </component>
+              <hspacer id="31c96">
+                <constraints>
+                  <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
             </children>
           </grid>
         </children>
