--- a/plugins/junit/src/com/intellij/execution/junit2/configuration/JUnitConfigurable.form
+++ b/plugins/junit/src/com/intellij/execution/junit2/configuration/JUnitConfigurable.form
@@ -10,7 +10,7 @@
     <children>
       <grid id="e7277" layout-manager="GridBagLayout">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -31,10 +31,16 @@
           <component id="4ae33" class="javax.swing.JComboBox" binding="myTypeChooser">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-              <gridbag top="0" left="10" bottom="0" right="0" weightx="1.0" weighty="1.0"/>
+              <gridbag top="0" left="10" bottom="0" right="0" weightx="0.0" weighty="1.0"/>
             </constraints>
             <properties/>
           </component>
+          <hspacer id="fa51d">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="1.0" weighty="0.0"/>
+            </constraints>
+          </hspacer>
         </children>
       </grid>
       <grid id="92997" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
