--- a/plugins/svn4idea/src/org/jetbrains/idea/svn17/SvnConfigurable.form
+++ b/plugins/svn4idea/src/org/jetbrains/idea/svn17/SvnConfigurable.form
@@ -320,6 +320,12 @@
               <text value="with command line client"/>
             </properties>
           </component>
+          <component id="44a8" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="myCommandLineClient">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
         </children>
       </grid>
     </children>
