--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/annotator/intentions/dynamic/ui/DynamicDialog.form
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/annotator/intentions/dynamic/ui/DynamicDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="myPanel" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="348" height="227"/>
+      <xy x="20" y="20" width="348" height="254"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -19,6 +19,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <labelFor value="397c0"/>
           <text resource-bundle="org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle" key="dynamic.property.dialog.class"/>
         </properties>
       </component>
@@ -27,7 +28,8 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="type"/>
+          <labelFor value="1d610"/>
+          <text value="&amp;Type:"/>
         </properties>
       </component>
       <component id="1d610" class="javax.swing.JComboBox" binding="myTypeComboBox">
@@ -81,7 +83,7 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Static"/>
+          <text value="&amp;Static"/>
         </properties>
       </component>
     </children>
